# cvo-rgbd

./: README.md
cpp/rkhs_registration/: CMakeLists.txt
cpp/rkhs_registration/include/: adaptive_cvo.hpp  cvo.hpp  data_type.h  pcd_generator.hpp  pcl_visualizer.hpp  rkhs_se3.hpp
cpp/rkhs_registration/script/: cvo_test.sh
cpp/rkhs_registration/src/: LieGroup.cpp  adaptive_cvo.cpp  adaptive_cvo_main.cpp  cvo.cpp  cvo_main.cpp  main.cpp  pcd_generator.cpp  pcl_visualizer.cpp  rkhs_se3.cpp
data/rgbd_dataset/: rgbddataset_cdf_plots.m  rgbddataset_rkhs.m  rgbddataset_trajectory_plot.m
data/rgbd_dataset/freiburg1_desk/: cv_rgbd_poses.csv  freiburg1_desk-gt-pose.mat  freiburg1_desk_07-May-2019-02-35-00.mat  opencv_freiburg1_desk.mat
data/rgbd_dataset/freiburg1_desk/depth/: note.txt
data/rgbd_dataset/freiburg1_desk/pcd_ds/: 1305031453.359684.pcd  1305031453.391690.pcd  1305031453.423683.pcd  1305031453.459685.pcd  1305031453.491698.pcd  note.txt
data/rgbd_dataset/freiburg1_desk/pcd_full/: note.txt
data/rgbd_dataset/freiburg1_desk/rgb/: note.txt
data/rgbd_dataset/rgbd_benchmark_tools/: add_pointclouds_to_bagfile.py  assoc.sh  generate_pointcloud.py  generate_registered_pointcloud.py
matlab/: ptcloud_edge_filter.m  run_toy_example.m
matlab/@rkhs_se3_registration/: rkhs_se3_registration.m
util/: generate_pointclouds.m  import_assoc_file.m  pcRangeFilter.m  ptcloud_edge_filter.m
